--- a/src/screens/ecommerce/orders/style.scss
+++ b/src/screens/ecommerce/orders/style.scss
@@ -2,7 +2,11 @@
     .ant-table.ant-table-middle .ant-table-tbody > tr > td{
         border-right: 1px solid #E5E5E5;
         padding: 10px 10px;
-      }
+    }
+
+    .ant-table.ant-table-middle .ant-table-tbody > tr > td:first-child{
+        border-left: 1px solid #E5E5E5;
+    }
 
     .cell-items {
         margin: 0 -10px;
