Fix modal discount product

--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -4,6 +4,13 @@
     overflow-x: hidden !important;
     overflow-y: scroll;
   }
+  .discount-item-popup{
+    width: 100%;
+    padding: 10px !important;
+    border: 1px solid red;
+    border-radius: 5px;
+    overflow: hidden
+  }
   .container-login {
     margin-bottom: 200px;
     .login {
