--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -238,6 +238,25 @@
     justify-self: flex-end;
     color: rgb(42, 42, 134);
   }
+
+  //style column lines
+  .ant-table.ant-table-middle .ant-table-tbody > tr > td{
+    border-right: 1px solid #E5E5E5;
+    padding: 10px 10px;
+  }
+
+  .ant-table.ant-table-middle .ant-table-tbody > tr > td:first-child{
+    border-left: 1px solid #E5E5E5;
+  }
+
+  .ant-table.ant-table-middle .ant-table-thead > tr > th {
+    border-right: 1px solid #E5E5E5;
+  }
+
+  .ant-table.ant-table-middle .ant-table-thead > tr > th:first-child{
+    border-left: 1px solid #E5E5E5;
+  }
+  //end style column lines
 }
 .customer-info-detail {
   .ant-tabs-nav {
@@ -305,6 +324,55 @@
   .ant-tag {
     margin: 0;
   }
+  
+  .ant-table-cell.product-and-quantity {
+    padding: 0 !important;
+  }
+
+  .product-and-quantity-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .product-name {
+      width: 210px;
+      text-align: center;
+    }
+  }
+
+  .item-custom-td {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    &:not(:last-child) {
+      border-bottom: 1px solid #dfdfdf;
+    }
+
+    .product {
+      width: 210px;
+      padding: 10px 10px;
+    }
+  }
+
+  .quantity {
+    width: 70px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:before {
+      content: "";
+      display: block;
+      width: 1px;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      bottom: 0;
+      right: 70px;
+      background-color: #dfdfdf;
+    }
+  }
+  //end style purchase history tab
 }
 .fw-500 {
   font-weight: 500;
