--- a/src/component/header/create-bill-step.scss
+++ b/src/component/header/create-bill-step.scss
@@ -1,28 +1,45 @@
-
 @import "assets/css/variable";
 
+.ant-steps-dot .ant-steps-item-content,
+.ant-steps-dot.ant-steps-small .ant-steps-item-content {
+  width: 84px;
+}
+.ant-steps-label-vertical .ant-steps-item {
+  width: 84px;
+  flex: initial;
+}
+.ant-steps-dot .ant-steps-item-tail:after,
+.ant-steps-dot.ant-steps-small .ant-steps-item-tail:after {
+  width: 100%;
+}
+.ant-steps-small .ant-steps-item-description {
+  font-size: 10px;
+}
 .create-bill-step {
   .ant {
     //Steps
     &-steps {
       &-small {
-        .ant-steps-item-title,
-        .ant-steps-item-description {
+        .ant-steps-item-title {
           font-size: 12px;
+        }
+        .ant-steps-item-description {
+          font-size: 10px;
         }
       }
       &-item {
         &-icon {
-          width: 24px !important;
-          height: 24px !important;
-          margin-left: 57px !important;
+          width: 14px !important;
+          height: 14px !important;
+          margin-left: 35px !important;
         }
         &-description {
           color: $placeholder-color !important;
         }
         &-wait {
           .ant-steps-item-tail {
-            top: 11px !important;
+            top: 6px !important;
+            margin: 0 0 0 35px;
             &::after {
               background-color: #d9d9e4 !important;
               margin-left: 10px !important;
@@ -34,11 +51,12 @@
         }
         &-process {
           .ant-steps-item-tail {
-            top: 11px !important;
+            top: 6px !important;
             background-color: #2a2a86;
+            margin: 0 0 0 125px;
             &::after {
               background-color: #2a2a86;
-              margin-left: 10px !important;
+              margin-left: -80px !important;
             }
           }
           .ant-steps-icon-dot {
@@ -46,7 +64,7 @@
           }
           .ant-steps-item-title,
           .ant-steps-item-description {
-            font-weight: 500;
+            font-weight: normal;
             color: #2a2a86;
             font-family: Roboto;
           }
@@ -56,10 +74,10 @@
         }
         &-finish {
           .ant-steps-item-tail {
-            top: 11px !important;
+            top: 6px !important;
             &::after {
               background-color: #2a2a86 !important;
-              margin-left: 10px !important;
+              margin-left: -25px !important;
             }
           }
           .ant-steps-icon-dot {
@@ -73,6 +91,10 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          svg {
+            width: 10px;
+            height: 10px;
+          }
         }
       }
     }
@@ -89,7 +111,6 @@
     }
   }
   .inactive {
-    
     .ant-steps-item-tail {
       background-color: #d9d9e4 !important;
       &::after {
