--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -603,54 +603,7 @@
     }
   }
   //Input
-  &-input {
-    height: 38px;
-    padding: 7px 14px;
-    border-color: $border-color;
-    font-size: 14px;
-    border-radius: $border-radius;
-    color: $label-color;
-    &-lg {
-      font-size: 1em;
-    }
-    &:hover,
-    &:focus {
-      border-color: $focus-border-color;
-      box-shadow: unset;
-    }
-    &-affix-wrapper {
-      padding: 0;
-      padding-right: 11px;
-      border-color: $border-color;
-      border-radius: $border-radius;
-      &-focused {
-        border-color: $focus-border-color;
-      }
-      &:hover,
-      &:focus {
-        border-color: $focus-border-color;
-        box-shadow: unset;
-      }
-      &:not(&-disabled) {
-        &:hover,
-        &:focus {
-          border-color: $focus-border-color;
-          box-shadow: unset;
-        }
-      }
-      .ant-input-prefix {
-        margin-left: 10px;
-        margin-right: 0;
-      }
-      & > input.ant-input {
-        height: 36px;
-        padding: 4px 14px;
-      }
-      & > .ant-input-prefix + input.ant-input {
-        padding-left: 5px;
-      }
-    }
-  }
+
   //Image
   &-image {
     &-img {
@@ -1039,12 +992,8 @@
 .ant-input-group.ant-input-group-compact
   > .ant-cascader-picker-focused:last-child
   .ant-input,
-.ant-input-group.ant-input-group-compact
-  > .ant-cascader-picker:last-child
-  .ant-input,
-.ant-input-group.ant-input-group-compact
-  > .ant-select:last-child
-  > .ant-select-selector,
+.ant-input-group.ant-input-group-compact > .ant-cascader-picker:last-child .ant-input,
+.ant-input-group.ant-input-group-compact > .ant-select:last-child > .ant-select-selector,
 .ant-input-group.ant-input-group-compact > :last-child {
   border-top-right-radius: $border-radius;
   border-bottom-right-radius: $border-radius;
