--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -889,7 +889,7 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   border-bottom: 1px solid #2a2a86;
 }
 .saleorder_shipment_button_active {
@@ -1340,12 +1340,12 @@
       }
     }
   }
-  .ant-card-head {
-    border: none;
-    .ant-card-head-wrapper {
-      border-bottom: 1px solid #e5e5e5;
-    }
-  }
+  // .ant-card-head {
+  //   border: none;
+  //   .ant-card-head-wrapper {
+  //     border-bottom: 1px solid #e5e5e5;
+  //   }
+  // }
   .ant-collapse-content-box {
     padding: 0;
   }
@@ -1525,14 +1525,14 @@
   }
 }
 // update payment
-.orders-update-payment {
-  .ant-card-head {
-    border: none;
-  }
-  .ant-card-head-wrapper {
-    border-bottom: 1px solid #e5e5e5;
-  }
-}
+// .orders-update-payment {
+//   .ant-card-head {
+//     border: none;
+//   }
+//   .ant-card-head-wrapper {
+//     border-bottom: 1px solid #e5e5e5;
+//   }
+// }
 
 /// orders shipment
 
