--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -485,7 +485,7 @@
   }
   .yody-table-discount-converted {
     font-size: 12px;
-    position: absolute;
+    // position: absolute;
     right: 1px;
     top: calc(100% + 2px);
   }
