update khách hàng

--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -316,7 +316,7 @@
     font-size: 12px;
     font-weight: 500;
     margin-top: 0px;
-    margin-bottom: 4px;
+    //margin-bottom: 4px;
   }
   .custom-select-suffix {
     .ant-btn-icon-only {
