update ghi chú của khách, màn hình chi tiết đơn hàng

--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -631,7 +631,7 @@
   background-color: #fff;
   border-bottom: 1px solid #e5e5e5;
   display: flex;
-  padding: 11px 11px 11px 16px;
+  padding: 11px 0 11px 0;
 }
 
 .ant-table-thead {
