--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -1,25 +1,4 @@
-.ant-form{
-  .ant-row {
-    .ant-collapse-content-box {
-      .date-option {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 10px;
-        .ant-btn {
-          width: 30%;
-        }
-      }
-      .button-option {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 10px;
-        .ant-btn {
-          width: 48%;
-        }
-      }
-    }
-  }
-}
+
 .order-options {
   border-bottom: 1px solid #5252;
   .ant-radio-group {
@@ -122,6 +101,61 @@
 }
 .order-filter-drawer {
   .ant-drawer-content {
+    .ant-drawer-header {
+      padding: 12px 20px;
+    }
+    .ant-drawer-body {
+      .body-container-form {
+        padding: 20px;
+      }
+    }
+    .ant-form{
+      p {
+        color: #222222;
+        font-weight: 500;
+        margin-bottom: 5px;
+      }
+      .ant-row {
+        .ant-form-item {
+          margin: 0 0 20px;
+        }
+        .date-option {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+          .ant-btn {
+            width: 30%;
+            padding: 0px 5px;
+            height: 33.5px;
+            line-height: 29px;
+          }
+        }
+        .ant-picker {
+          height: 40px;
+        }
+        .date-range {
+          display: flex;
+          .swap-right-icon {
+            width: 10%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .anticon-swap-right {
+              font-size: 23px;
+              color: #757575;
+            }
+          }
+        }
+        .button-option {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+          .ant-btn {
+            width: 48%;
+          }
+        }
+      }
+    }
     .price_min {
       width: 100%;
     }
