--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -85,20 +85,6 @@
   }
 }
 
-.custom-table {
-  .ant-table-tbody {
-    tr {
-      td {
-        // .items {
-        //   padding: 0 !important;
-        // }
-        // .items {
-        //   padding: 0 !important;
-        // }
-      }
-    }
-  }
-}
 .order-filter-drawer {
   .ant-drawer-content {
     .ant-drawer-header {
@@ -161,7 +147,6 @@
     }
     .price_max {
       width: 100%;
-      border-left: none;
     }
     #price_min {
       border-right: none;
@@ -199,6 +184,10 @@
       color: #2a2a86;
       border-color: rgba(42, 42, 134, 0.05);
       background-color: rgba(42, 42, 134, 0.05);
+    }
+    .ant-drawer-footer {
+      background: #FFFFFF;
+      box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
     }
   }
 }
