update filter order, shipment, return

--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -138,6 +138,7 @@
           margin-bottom: 10px;
           .ant-btn {
             width: 48%;
+            height: 40px;
           }
         }
         .button-option-2 {
