--- a/src/screens/fpage/fpage-customer/customer.scss
+++ b/src/screens/fpage/fpage-customer/customer.scss
@@ -78,6 +78,23 @@
   justify-content: flex-end;
 }
 
+.phone-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  .phone-input {
+    flex: 1;
+  }
+  .ant-form-item {
+    flex: 1;
+    margin-bottom: 0;
+    .ant-form-item-control {
+      flex: unset !important;
+      margin-right: 8px;
+    }
+  }
+}
+
 .customer-information-card {
   .ant-collapse-header {
     padding: 0 24px !important;
@@ -123,7 +140,7 @@
     }
   }
   .ant-table-body {
-    .customer-name-textoverflow{
+    .customer-name-textoverflow {
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
@@ -132,7 +149,6 @@
     }
     .ant-table-tbody > tr > td {
       padding: 10px 15px !important;
-      
     }
     &::-webkit-scrollbar {
       // width: 12px;
@@ -164,10 +180,9 @@
   width: 380px;
 }
 
-.customer-group-table{
+.customer-group-table {
   .ant-table-tbody > tr > td {
     padding: 10px 15px !important;
-    
   }
 }
 
@@ -186,7 +201,7 @@
     justify-content: center;
     border-radius: 50%;
   }
-  &-right{
+  &-right {
     justify-content: center;
     display: flex;
     flex-direction: column;
@@ -202,13 +217,13 @@
     color: rgba(32, 32, 32, 0.9);
     opacity: 0.6;
   }
-  .ant-modal-body{
-    padding: 6px 24px 0 24px
+  .ant-modal-body {
+    padding: 6px 24px 0 24px;
   }
 }
 
 .customer-note-item {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   margin-bottom: 10px;
   padding: 10px;
   display: flex;
