--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -393,7 +393,7 @@
       }
       &:first-child {
         &::before {
-          top: 0;
+          top: 6px;
         }
       }
       .ant-collapse-content-box {
