--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1167,7 +1167,7 @@
       }
     }
   }
-  .ant-btn-default {
+  .btn-list-method .ant-btn-default {
     background: #ffff;
     border: 1px solid #e5e5e5;
     border-radius: 3px;
