--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -123,6 +123,7 @@
           display: flex;
           .swap-right-icon {
             width: 10%;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
