update code for add new promotion

--- a/src/screens/promotion/promotion-code/promotion-code.scss
+++ b/src/screens/promotion/promotion-code/promotion-code.scss
@@ -391,4 +391,13 @@
       cursor: pointer;
     }
   }
-  
+  hr {
+    border-top: 1px solid #E5E5E5;
+  }
+
+  .anticon-info-circle {
+    svg {
+      cursor: pointer;
+      color: #2d9cdb;
+    }
+  }
