--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -640,7 +640,7 @@
 //checking
 .ant-col .ant-form-item-control {
   input {
-    border-radius: 5px;
+    // border-radius: 5px;
   }
 }
 
@@ -1681,7 +1681,7 @@
   display: flex;
   flex-wrap: wrap;
   border: 1px solid #d9d9d9;
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 2px 14px;
   min-height: 40px;
   &:hover {
