--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -26,6 +26,8 @@ $mobile-width: 991px;
 $tablet-width: 992px;
 $desktop-width: 1400px;
 $black: #000000;
+$scoll-bar-table: 12px;
+$border-radius-scoll-bar-table: 12px;
 @mixin mobile {
   @media (max-width: #{$mobile-width}) {
     @content;
