--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -511,7 +511,7 @@
       }
       .ant-select {
         &-selector {
-          min-height: 38px;
+          height: 38px;
           // border-radius: $border-radius;
           padding: 0 14px;
           .ant-select-selection {
