--- a/src/screens/promotion/promo-code/promo-code.scss
+++ b/src/screens/promotion/promo-code/promo-code.scss
@@ -12,7 +12,7 @@
           .search {
             flex: 1;
           }
-          .store {
+          .status {
             width: 171px;
           }
         }
