fix bug layout promotions

--- a/src/screens/promotion/discount/discount.scss
+++ b/src/screens/promotion/discount/discount.scss
@@ -214,3 +214,13 @@
 .ant-select-selector {
   border-radius: 0px !important;
 }
+
+.ant-select {
+  &.ant-select-selector-min-height {
+    .ant-select-selector,
+    .ant-select-selector .ant-select-selection-search-input {
+      height: auto;
+      min-height: 36px;
+    }
+  }
+}
