--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -295,6 +295,7 @@
     }
     #ct-container {
         top: 50px !important;
+        z-index: 999999999;
     }
     .ant-form-item {
         flex-direction: row !important;
