--- a/src/screens/promotion/discount/discount.scss
+++ b/src/screens/promotion/discount/discount.scss
@@ -224,3 +224,16 @@
     }
   }
 }
+
+.card {
+  .status-tag {
+    margin-left: 10px;
+    background-color: #27AE60;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 6px;
+    border-radius: 100px;
+    padding: 5px 10px;
+  }
+}
