--- a/src/screens/promotion/promo-code/promo-code.scss
+++ b/src/screens/promotion/promo-code/promo-code.scss
@@ -84,3 +84,21 @@ hr {
   width: 100%;
   padding: 10px 30px;
 }
+
+#discount_add {
+  .ant-input::-webkit-input-placeholder {
+    text-transform: initial;
+  }
+  
+  .ant-input:-moz-placeholder { 
+      text-transform: initial;
+  }
+  
+  .ant-input::-moz-placeholder {  
+      text-transform: initial;
+  }
+  
+  .ant-input:-ms-input-placeholder { 
+      text-transform: initial;
+  }
+}
