--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1010,6 +1010,9 @@
   .ant-modal-header {
     padding: 27px 27.5px 21px 30px;
   }
+  .ant-modal-body {
+    padding: 0;
+  }
   .orders-cancel-option {
     width: 100%;
     .ant-select {
