[ES-563] [FE] Ghép nối api các trường thông tin bổ sung trong chi tiết khách hàng

--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -261,6 +261,10 @@
 }
 
 .customer-info-detail {
+    margin-bottom: 20px;
+    .ant-card {
+        height: 100%;
+    }
     .ant-tabs-nav {
         padding: 0;
     }
