--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -210,3 +210,123 @@
   font-weight: 500;
   color: #222222;
 }
+
+.order-filter-drawer-pack {
+  .ant-drawer-content {
+    .ant-drawer-header {
+      padding: 12px 20px;
+    }
+    .ant-drawer-body {
+      .body-container-form {
+        padding: 20px;
+      }
+    }
+    .ant-form{
+      p {
+        color: #222222;
+        font-weight: 500;
+        margin-bottom: 5px;
+      }
+      .ant-row {
+        .ant-form-item {
+          margin: 0 0 20px;
+        }
+        .date-option {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+          .ant-btn {
+            width: 30%;
+            padding: 0px 5px;
+            height: 33.5px;
+            line-height: 29px;
+          }
+        }
+        .ant-picker {
+          height: 40px;
+        }
+        .date-range {
+          display: flex;
+          .swap-right-icon {
+            width: 10%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .anticon-swap-right {
+              font-size: 23px;
+              color: #757575;
+            }
+          }
+        }
+        .button-option-1 {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+          .ant-btn {
+            width: 48%;
+            height: 40px;
+          }
+        }
+        .button-option-2 {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+          .ant-btn {
+            width: 30%;
+            padding: 0px 5px;
+            height: 40px;
+            line-height: 29px;
+          }
+        }
+      }
+    }
+    .price_min {
+      width: 100%;
+    }
+    .price_max {
+      width: 100%;
+    }
+    #price_min {
+      border-right: none;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    
+    #price_max {
+      border-left: none;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    // .ant-select {
+    //   .ant-select-selector {
+    //     .ant-select-selection-item {
+    //       background-color: #2A2A86;
+    //       border-radius: 6px;
+    //       font-style: normal;
+    //       font-weight: normal;
+    //       font-size: 14px;
+    //       line-height: 18px;
+    //       font-family: Roboto;
+    //       .ant-select-selection-item-content, .ant-select-selection-item-remove {
+    //         color: #FFFFFF;
+    //       }
+    //     }
+    //   }
+    // }
+    .active {
+      color: #FFFFFF;
+      border-color: rgba(42, 42, 134, 0.1);
+      background-color: #2A2A86;
+    }
+    .deactive {
+      color: #2a2a86;
+      border-color: rgba(42, 42, 134, 0.05);
+      background-color: rgba(42, 42, 134, 0.05);
+    }
+    .ant-drawer-footer {
+      background: #FFFFFF;
+      box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
+    }
+  }
+}
