Feature/es 447 1 Fix UI

--- a/src/screens/yd-page/index.scss
+++ b/src/screens/yd-page/index.scss
@@ -290,6 +290,9 @@
   .container {
     margin-left: 0;
   }
+  .container.collapsed{
+    margin-left: 0;
+  }
   .ant-steps {
     display: none !important;
   }
