--- a/src/assets/css/_pack.scss
+++ b/src/assets/css/_pack.scss
@@ -62,3 +62,15 @@
 
     // }
 }
+
+.pack-info-update-card{
+    margin: 0px 10px;
+    .t1{
+        color: #222222;
+        font-weight: 500;
+        margin-left: 5px;
+    }
+    .t1-color{
+        color:#666666;
+    }
+}
