change text screens add,update core

--- a/src/assets/css/_table.scss
+++ b/src/assets/css/_table.scss
@@ -158,4 +158,12 @@
       cursor: pointer;
     }
   }
+  .tr-hover{
+    tr {
+      cursor: pointer;
+      &:hover {
+        color: #2a2a86;
+      }
+    }
+  }
 }
