style lại tracking log, thêm update chiết khấu có giới hạn số lượng

--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1309,9 +1309,20 @@
       //   left: -4px;
       //   border-radius: 50%;
       // }
-			&.finished {
+			&.currentTimeline {
 				&:after {
 					background-color: $green !important;
+				}
+				b, i, span {
+					color: $green !important;
+				}
+				&.hasError {
+					&:after {
+						background-color: $red !important;
+					}
+					b, i, span {
+						color: $red !important;
+					}
 				}
 			}
     }
