--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1338,9 +1338,9 @@
         margin: 0;
       }
       div {
-        display: flex;
-        width: 100%;
-        padding: 0;
+        // display: flex;
+        // width: 100%;
+        // padding: 0;
         & > div {
           &:first-child {
           }
