--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -963,7 +963,7 @@
     & > div {
       &:first-child {
         & > div {
-          width: 220px;
+          // width: 220px;
           display: flex;
           align-items: center;
           & > div {
@@ -1349,6 +1349,7 @@
     .ant-collapse-header {
       display: flex;
       flex-direction: row;
+      align-items: center;
       .saleorder-header-arrow {
         width: 30px;
         margin: 0;
