--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -67,11 +67,14 @@
             left: 0;
             padding-top: 60px;
             background-color: $sider-color;
-            // @media screen and (max-width: 1439px) {
-            //   max-width: 200px !important;
-            //   min-width: 200px !important;
-            //   width: 200px !important;
-            // }
+            &:not(.ant-layout-sider-collapsed) {
+                @media screen and (max-width: 1439px) {
+                  max-width: 200px !important;
+                  min-width: 200px !important;
+                  width: 200px !important;
+                }
+
+            }
             &-children {
                 .ant {
                     &-menu {
